kubernetes/radarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: radarr
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:5.28.0@sha256:c984533510abe0219a70e80d15bd0d212b7df21baa0913759c4ce6cc9092240b
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /shared
          name: shared
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared
        name: shared
