kubernetes/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: radarr
  annotations:
    ak-type: basic-auth
    cert-manager.io/cluster-issuer: letsencrypt
    ak-path-exclude: /api(/|$)
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Radarr
    gethomepage.dev/description: Movie Manager
    gethomepage.dev/group: Media Automation
    gethomepage.dev/icon: radarr.png

spec:
  tls:
  - hosts:
    - radarr.k.oneill.net
    secretName: radarr-tls
  rules:
  - host: radarr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
